kubernetes/ingress/vproingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vpro-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: vprofile.groophy.in
      http:
        paths:
        - path: /login
          pathType: Prefix
          backend:
            service:
              name: my-app
              port:
                number: 8080
